--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,16 +10,6 @@
 # Define library names for cleaner templating
 {% set krb5_libs = ["krb5", "gssapi", "gssrpc", "kadm5", "kdb5", "krad", "k5crypto", "com_err", "verto"] %}
 {% set krb5_headers = ["krb5", "gssapi", "kadm5", "kdb5", "krad", "k5crypto"] %}
-{% set unix_prefix = "" %}  # [not win]
-{% set unix_suffix = "" %}  # [not win]
-{% set win_prefix = "Library/" %}  # [win]
-{% set win_suffix = ".exe" %}  # [win]
-
-# Define library names for cleaner templating
-{% set krb5_libs = ["krb5", "gssapi", "gssrpc", "kadm5", "kdb5", "krad", "k5crypto", "com_err", "verto"] %}
-{% set krb5_headers = ["krb5", "gssapi", "kadm5", "kdb5", "krad", "k5crypto"] %}
-{% set krb5_executables = ["kinit", "klist", "kdestroy", "kpasswd", "kswitch", "ktutil", "kvno", "k5srvutil", "kadmin", "gss-client", "sclient", "sim_client", "uuclient", "ksu", "krb5-config"] %}
-{% set krb5_server_executables = ["kadmin.local", "kadmind", "kdb5_util", "kprop", "kpropd", "kproplog", "krb5kdc", "krb5-send-pr", "gss-server", "sim_server", "sserver", "uuserver"] %}
 
 package:
   name: {{ name|lower }}-split
@@ -30,7 +20,7 @@ source:
   sha256: 2157d92020d408ed63ebcd886a92d1346a1383b0f91123a0473b4f69b4a24861
 
 build:
-  number: 3
+  number: 6
   skip: true  # [win and vc<14]
   missing_dso_whitelist:
     - api-ms-win-core-winrt-string-l1-1-0.dll  # [win]
@@ -40,7 +30,6 @@ build:
 requirements:
   build:
     - {{ compiler('c') }}
-    - {{ stdlib("c") }}
     - {{ compiler('cxx') }}
     - libtool  # [unix]
     - bison       # [not win]
@@ -68,80 +57,43 @@ outputs:
         - libstdcxx-ng    # [linux]
         - libedit         # [unix]
         - ncurses         # [unix]
+        - openssl         # [unix]
+        - lmdb            # [unix]
     files:
-      # Libraries - Unix
-      {% for lib in krb5_libs %}
-      - lib/lib{{ lib }}*      # [unix]
-      {% endfor %}
+      # Libraries - Unix (only krb5 libraries, not executables)
+      - lib/libkrb5*          # [unix]
+      - lib/libgssapi*        # [unix]
+      - lib/libgssrpc*        # [unix]
+      - lib/libkadm5*         # [unix]
+      - lib/libkdb5*          # [unix]
+      - lib/libkrad*          # [unix]
+      - lib/libk5crypto*      # [unix]
+      - lib/libcom_err*       # [unix]
+      - lib/libverto*         # [unix]
+      - lib/libkrb5support*   # [unix]
       # Libraries - Windows
       - {{ win_prefix }}lib/*.lib # [win]
-      {% for lib in krb5_libs %}
-      - {{ win_prefix }}bin/{{ lib }}*.dll # [win]
-      {% endfor %}
+      - {{ win_prefix }}bin/krb5*.dll # [win]
+      - {{ win_prefix }}bin/gssapi*.dll # [win]
+      - {{ win_prefix }}bin/gssrpc*.dll # [win]
+      - {{ win_prefix }}bin/kadm5*.dll # [win]
+      - {{ win_prefix }}bin/kdb5*.dll # [win]
+      - {{ win_prefix }}bin/krad*.dll # [win]
+      - {{ win_prefix }}bin/k5crypto*.dll # [win]
+      - {{ win_prefix }}bin/com_err*.dll # [win]
+      - {{ win_prefix }}bin/verto*.dll # [win]
       
       # Headers - Unix
-      {% for header in krb5_headers %}
-      - include/{{ header }}/     # [unix]
-      {% endfor %}
-      - include/com_err.h # [unix]
-      - include/verto.h   # [unix]
-      - include/krb5.h    # [unix]
-      - include/gssapi.h  # [unix]
-      - include/gssapi_krb5.h # [unix]
-      - include/gssrpc.h  # [unix]
-      - include/kadm5.h   # [unix]
-      - include/kdb5.h    # [unix]
-      - include/krad.h    # [unix]
-      - include/k5crypto.h # [unix]
+      - include/     # [unix]
       
       # Headers - Windows
-      {% for header in krb5_headers %}
-      - {{ win_prefix }}include/{{ header }}/ # [win]
-      {% endfor %}
-      - {{ win_prefix }}include/com_err.h # [win]
-      - {{ win_prefix }}include/verto.h # [win]
-      - {{ win_prefix }}include/krb5.h # [win]
-      - {{ win_prefix }}include/gssapi.h # [win]
-      - {{ win_prefix }}include/gssapi_krb5.h # [win]
-      - {{ win_prefix }}include/gssrpc.h # [win]
-      - {{ win_prefix }}include/kadm5.h # [win]
-      - {{ win_prefix }}include/kdb5.h # [win]
-      - {{ win_prefix }}include/krad.h # [win]
-      - {{ win_prefix }}include/k5crypto.h # [win]
-      - {{ win_prefix }}include/verto.h # [win]
+      - {{ win_prefix }}include/ # [win]
       
       # Development tools (only compile_et, krb5-config goes to krb5 package)
       - bin/compile_et    # [unix]
-      
-      # Package config
-      - lib/pkgconfig/*.pc # [unix]
-      
-      # Plugins
-      - lib/krb5/plugins/**/* # [unix]
-      - {{ win_prefix }}bin/plugins/**/* # [win]
-      
-      # Documentation
-      - share/et/**/*     # [unix]
-      - share/examples/**/* # [unix]
-      - share/locale/**/* # [unix]
-      - share/man/man1/compile_et.1  # [unix]
-      - share/man/man5/**/* # [unix]
-      - share/man/man7/**/* # [unix]
+      - {{ win_prefix }}bin/compile_et.exe # [win]
       
     requirements:
-      build:
-        - {{ compiler('c') }}
-        - {{ stdlib("c") }}
-        - {{ compiler('cxx') }}
-        - libtool  # [unix]
-        - bison       # [not win]
-        - autoconf    # [not win]
-        - posix       # [win]
-        - perl        # [win]
-        - pkg-config  # [unix]
-        - make        # [unix]
-        - python *    # [not win]
-        - gettext     # [not win]
       host:
         - libedit  # [unix]
         - openssl
@@ -158,31 +110,90 @@ outputs:
   - name: {{ name }}
     script: build.sh   # [unix]
     script: bld.bat    # [win]
-    script: move-files.py
     build:
       ignore_run_exports:
         - openssl
+        - libcxx          # [osx]
+        - libstdcxx-ng    # [linux]
+        - lmdb            # [unix]
     files:
-      # Files moved to staging by move-files.py
-      - staging/bin/
-      - staging/sbin/
-      - staging/share/man/
+      # Executables - Unix (only executables, not libraries)
+      - bin/kinit
+      - bin/klist
+      - bin/kdestroy
+      - bin/kpasswd
+      - bin/kswitch
+      - bin/ktutil
+      - bin/kvno
+      - bin/k5srvutil
+      - bin/kadmin
+      - bin/gss-client
+      - bin/sclient
+      - bin/sim_client
+      - bin/uuclient
+      - bin/krb5-config
+      - sbin/kadmin.local
+      - sbin/kadmind
+      - sbin/kdb5_util
+      - sbin/kprop
+      - sbin/kpropd
+      - sbin/kproplog
+      - sbin/krb5kdc
+      - sbin/krb5-send-pr
+      - sbin/gss-server
+      - sbin/sim_server
+      - sbin/sserver
+      - sbin/uuserver
+      
+      # Manual pages - Unix
+      - share/man/man1/kinit.1
+      - share/man/man1/klist.1
+      - share/man/man1/kdestroy.1
+      - share/man/man1/kpasswd.1
+      - share/man/man1/kswitch.1
+      - share/man/man1/ktutil.1
+      - share/man/man1/kvno.1
+      - share/man/man1/k5srvutil.1
+      - share/man/man1/kadmin.1
+      - share/man/man1/sclient.1
+      - share/man/man1/krb5-config.1
+      - share/man/man8/kadmin.local.8
+      - share/man/man8/kadmind.8
+      - share/man/man8/kdb5_util.8
+      - share/man/man8/kprop.8
+      - share/man/man8/kpropd.8
+      - share/man/man8/kproplog.8
+      - share/man/man8/krb5kdc.8
+      - share/man/man8/sserver.8
+      - share/man/man8/kdb5_ldap_util.8
       # Windows executables
-      - {{ win_prefix }}bin/*{{ win_suffix }}      # [win]
+      - {{ win_prefix }}bin/kinit{{ win_suffix }}
+      - {{ win_prefix }}bin/klist{{ win_suffix }}
+      - {{ win_prefix }}bin/kdestroy{{ win_suffix }}
+      - {{ win_prefix }}bin/kpasswd{{ win_suffix }}
+      - {{ win_prefix }}bin/kswitch{{ win_suffix }}
+      - {{ win_prefix }}bin/ktutil{{ win_suffix }}
+      - {{ win_prefix }}bin/kvno{{ win_suffix }}
+      - {{ win_prefix }}bin/k5srvutil{{ win_suffix }}
+      - {{ win_prefix }}bin/kadmin{{ win_suffix }}
+      - {{ win_prefix }}bin/gss-client{{ win_suffix }}
+      - {{ win_prefix }}bin/sclient{{ win_suffix }}
+      - {{ win_prefix }}bin/sim_client{{ win_suffix }}
+      - {{ win_prefix }}bin/uuclient{{ win_suffix }}
+      - {{ win_prefix }}bin/krb5-config{{ win_suffix }}
+      - {{ win_prefix }}bin/kadmin.local{{ win_suffix }}
+      - {{ win_prefix }}bin/kadmind{{ win_suffix }}
+      - {{ win_prefix }}bin/kdb5_util{{ win_suffix }}
+      - {{ win_prefix }}bin/kprop{{ win_suffix }}
+      - {{ win_prefix }}bin/kpropd{{ win_suffix }}
+      - {{ win_prefix }}bin/kproplog{{ win_suffix }}
+      - {{ win_prefix }}bin/krb5kdc{{ win_suffix }}
+      - {{ win_prefix }}bin/krb5-send-pr{{ win_suffix }}
+      - {{ win_prefix }}bin/gss-server{{ win_suffix }}
+      - {{ win_prefix }}bin/sim_server{{ win_suffix }}
+      - {{ win_prefix }}bin/sserver{{ win_suffix }}
+      - {{ win_prefix }}bin/uuserver{{ win_suffix }}
     requirements:
-      build:
-        - {{ compiler('c') }}
-        - {{ stdlib("c") }}
-        - {{ compiler('cxx') }}
-        - libtool  # [unix]
-        - bison       # [not win]
-        - autoconf    # [not win]
-        - posix       # [win]
-        - perl        # [win]
-        - pkg-config  # [unix]
-        - make        # [unix]
-        - python *    # [not win]
-        - gettext     # [not win]
       host:
         - libedit  # [unix]
         - openssl
@@ -192,21 +203,17 @@ outputs:
         - {{ pin_subpackage('libkrb5', exact=True) }}
         - libedit  # [unix]
         - openldap # [linux]
-        - lmdb     # [unix]
     test:
       commands:
-        # Test for key executables in staging
-        - test -f $PREFIX/staging/bin/kinit
-        - test -f $PREFIX/staging/bin/klist
-        - test -f $PREFIX/staging/bin/kdestroy
-        - test -f $PREFIX/staging/bin/krb5-config
-        - test -f $PREFIX/staging/sbin/krb5kdc
+        # Test for key executables
+        - test -f $PREFIX/bin/kinit # [unix]
+        - test -f $PREFIX/bin/klist # [unix]
+        - test -f $PREFIX/bin/kdestroy # [unix]
+        - test -f $PREFIX/bin/krb5-config # [unix]
+        - test -f $PREFIX/sbin/krb5kdc # [unix]
         # Test for Windows executables
-        - test -f $PREFIX/Library/bin/kinit.exe # [win]
-        - test -f $PREFIX/Library/bin/klist.exe # [win]
-        # Verify files are not in wrong locations
-        - test ! -f $PREFIX/bin/krb5-config
-        - test ! -f $PREFIX/lib/libkrb5${SHLIB_EXT}
+        - if exist "%PREFIX%\\Library\\bin\\kinit.exe" (exit 0) else (exit 1) # [win]
+        - if exist "%PREFIX%\\Library\\bin\\klist.exe" (exit 0) else (exit 1) # [win]
 
 about:
   home: https://web.mit.edu/kerberos/
