--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -57,7 +57,6 @@ outputs:
         - libstdcxx-ng    # [linux]
         - libedit         # [unix]
         - ncurses         # [unix]
-        - openssl         # [unix]
         - lmdb            # [unix]
     files:
       # Libraries - Unix (only krb5 libraries, not executables)
@@ -105,6 +104,7 @@ outputs:
         - openssl
         - lmdb                  # [unix]
       run:
+        - openssl
         - lmdb                  # [unix]
     test:
       commands:
@@ -210,12 +210,10 @@ outputs:
         - libedit  # [unix]
         - openssl
         - lmdb                  # [unix]
-        - openldap # [linux]
         - {{ pin_subpackage('libkrb5', exact=True) }}
       run:
         - {{ pin_subpackage('libkrb5', exact=True) }}
         - libedit  # [unix]
-        - openldap # [linux]
     test:
       commands:
         # Test for key executables
