Fix openssl overlinking warning, and perl locale warnings

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -60,6 +60,7 @@ outputs:
         - libedit         # [unix]
         - ncurses         # [unix]
         - lmdb            # [unix]
+        - openssl         # [win]
     files:
       # Libraries - Unix (only krb5 libraries, not executables)
       - lib/libkrb5*          # [unix]
