--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,12 @@
 {% set name = "krb5" %}
 {% set version = "1.21.3" %}
 
+# Platform-specific prefixes and suffixes
+{% set win_prefix = "Library/" %}
+{% set win_suffix = ".exe" %}
+
 package:
-  name: {{ name|lower }}
+  name: {{ name|lower }}-split
   version: {{ version }}
 
 source:
@@ -10,40 +14,241 @@ source:
   sha256: 2157d92020d408ed63ebcd886a92d1346a1383b0f91123a0473b4f69b4a24861
 
 build:
-  number: 1
-  skip: True  # [win and vc<14]
-  run_exports:
-    # stable within minor revisions: https://abi-laboratory.pro/tracker/timeline/krb5/
-    - {{ pin_subpackage('krb5', max_pin='x.x') }}
-  ignore_run_exports:
-    # C++ and Tcl are only needed for performing built-in unit tests.
-    - libcxx          # [osx]
-    - libstdcxx-ng    # [linux]
-    - tk
-  missing_dso_whitelist:          # [osx]
-    - /usr/lib/libresolv.9.dylib  # [osx]
+  number: 2
+  skip: true  # [win and vc<14]
+  missing_dso_whitelist:
+    - api-ms-win-core-winrt-error-l1-1-0.dll   # [win]
+    - api-ms-win-core-winrt-l1-1-0.dll         # [win]
+    - api-ms-win-core-winrt-string-l1-1-0.dll  # [win]
 
 requirements:
   build:
-    - {{ stdlib('c') }}
+    - {{ stdlib("c") }}
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - bison       # [not win]
-    - autoconf    # [not win]
-    - posix       # [win]
-    - perl        # [win]
-    - pkg-config  # [unix]
-    - make        # [unix]
+    - autoconf     # [not win]
+    - bison        # [not win]
+    - gettext      # [not win]
+    - libtool      # [unix]
+    - make         # [unix]
+    - msys2-gawk   # [win]
+    - msys2-posix  # [win]
+    - perl         # [win]
+    - pkg-config   # [unix]
+    - python *     # [not win]
   host:
-    - libedit 3.1.20221030  # [unix]
-    - openssl {{ openssl }}
-    - tk 8.6.12
-  run:
-    - {{ pin_compatible('libedit') }}  # [unix]
+    - libedit      # [unix]
+    - lmdb         # [unix]
+    - openssl
 
-test:
-  requires:
-    - python 3.11
+outputs:
+  - name: lib{{ name }}
+    script: build-krb5-split.sh   # [unix]
+    script: build-krb5-split.bat  # [win]
+    build:
+      run_exports:
+        - {{ pin_subpackage('libkrb5', max_pin='x.x') }}
+      ignore_run_exports:
+        - libcxx          # [osx]
+        - libedit         # [unix]
+        - libstdcxx-ng    # [linux]
+        - lmdb            # [unix]
+        - ncurses         # [unix]
+        - openssl         # [win]
+    files:
+      # Libraries - Unix (only krb5 libraries, not executables)
+      - lib/libcom_err*       # [unix]
+      - lib/libgssapi*        # [unix]
+      - lib/libgssrpc*        # [unix]
+      - lib/libk5crypto*      # [unix]
+      - lib/libkadm5*         # [unix]
+      - lib/libkdb5*          # [unix]
+      - lib/libkrad*          # [unix]
+      - lib/libkrb5*          # [unix]
+      - lib/libkrb5support*   # [unix]
+      - lib/libverto*         # [unix]
+      # Libraries - Windows
+      - {{ win_prefix }}bin/comerr*.dll    # [win]
+      - {{ win_prefix }}bin/gssapi*.dll    # [win]
+      - {{ win_prefix }}bin/gssrpc*.dll    # [win]
+      - {{ win_prefix }}bin/k5crypto*.dll  # [win]
+      - {{ win_prefix }}bin/k5sprt*.dll    # [win]
+      - {{ win_prefix }}bin/kadm5*.dll     # [win]
+      - {{ win_prefix }}bin/kdb5*.dll      # [win]
+      - {{ win_prefix }}bin/kfwlogon*.dll  # [win]
+      - {{ win_prefix }}bin/krad*.dll      # [win]
+      - {{ win_prefix }}bin/krb5*.dll      # [win]
+      - {{ win_prefix }}bin/krbcc*.dll     # [win]
+      - {{ win_prefix }}bin/leashw*.dll    # [win]
+      - {{ win_prefix }}bin/plugins/preauth/spake*.dll # [win]
+      - {{ win_prefix }}bin/verto*.dll      # [win]
+      - {{ win_prefix }}bin/xpprof*.dll     # [win]
+      - {{ win_prefix }}bin/krb5_64.dll     # [win]
+      - {{ win_prefix }}lib/*.lib           # [win]
+      
+      # Headers - Unix
+      - include/com_err.h                   # [unix]
+      - include/gssapi.h                    # [unix]
+      - include/gssapi/                     # [unix]
+      - include/gssrpc/                     # [unix]
+      - include/kadm5/                      # [unix]
+      - include/kdb.h                       # [unix]
+      - include/krad.h                      # [unix]
+      - include/krb5.h                      # [unix]
+      - include/krb5/                       # [unix]
+      - include/profile.h                   # [unix]
+      - include/verto-module.h              # [unix]
+      - include/verto.h                     # [unix]
+      
+      # Headers - Windows
+      - {{ win_prefix }}include/            # [win]
+      
+      # Development tools (krb5-config needed for build-time dependencies)
+      - bin/compile_et                      # [unix]
+      - bin/krb5-config                     # [unix]
+      - {{ win_prefix }}bin/compile_et.exe  # [win]
+      # Note: krb5-config.exe doesn't exist on Windows (Unix-specific utility)
+
+      
+    requirements:
+      build:
+        - {{ stdlib("c") }}
+        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
+        - libtool      # [unix]
+        - bison        # [not win]
+        - autoconf     # [not win]
+        - msys2-posix  # [win]
+        - perl         # [win]
+        - pkg-config   # [unix]
+        - make         # [unix]
+        - python *     # [not win]
+        - gettext      # [not win]
+        - msys2-gawk   # [win]
+      host:
+        - libedit      # [unix]
+        - lmdb         # [unix]
+        - openssl
+      run:
+        - lmdb         # [unix]
+        - openssl
+    test:
+      commands:
+        - set -x                                  # [unix]
+        - test -f $PREFIX/lib/libkrb5${SHLIB_EXT} # [unix]
+        - test -f $PREFIX/include/krb5.h          # [unix]
+        - test -f $PREFIX/include/gssapi.h        # [unix]
+        - test -f $PREFIX/include/gssapi/gssapi.h # [unix]
+        - test -f $PREFIX/include/krb5/krb5.h     # [unix]
+        - test -f $PREFIX/bin/krb5-config         # [unix]
+        - echo on                                 # [win]
+        - if exist "%PREFIX%\\Library\\bin\\krb5_64.dll" (exit 0) else (exit 1) # [win]
+        - if exist "%PREFIX%\\Library\\include\\krb5.h" (exit 0) else (exit 1)  # [win]
+
+  - name: {{ name }}
+    script: build-krb5-split.sh   # [unix]
+    script: build-krb5-split.bat  # [win]
+    build:
+      ignore_run_exports:
+        - libcxx          # [osx]
+        - libstdcxx-ng    # [linux]
+        - lmdb            # [unix]
+        - openssl
+    files:
+      # Executables - Unix (only executables, not libraries)
+      - bin/gss-client
+      - bin/k5srvutil
+      - bin/kadmin
+      - bin/kdestroy
+      - bin/kinit
+      - bin/klist
+      - bin/kpasswd
+      - bin/kswitch
+      - bin/ktutil
+      - bin/kvno
+      - bin/sclient
+      - bin/sim_client
+      - bin/uuclient
+      - sbin/gss-server
+      - sbin/kadmin.local
+      - sbin/kadmind
+      - sbin/kdb5_util
+      - sbin/kprop
+      - sbin/kpropd
+      - sbin/kproplog
+      - sbin/krb5-send-pr
+      - sbin/krb5kdc
+      - sbin/sim_server
+      - sbin/sserver
+      - sbin/uuserver
+
+      # Windows executables
+      - {{ win_prefix }}bin/ccapiserver{{ win_suffix }}
+      - {{ win_prefix }}bin/gss-client{{ win_suffix }}
+      - {{ win_prefix }}bin/gss-server{{ win_suffix }}
+      - {{ win_prefix }}bin/k5srvutil{{ win_suffix }}
+      - {{ win_prefix }}bin/kadmin.local{{ win_suffix }}
+      - {{ win_prefix }}bin/kadmin{{ win_suffix }}
+      - {{ win_prefix }}bin/kadmind{{ win_suffix }}
+      - {{ win_prefix }}bin/kcpytkt{{ win_suffix }}
+      - {{ win_prefix }}bin/kdb5_util{{ win_suffix }}
+      - {{ win_prefix }}bin/kdeltkt{{ win_suffix }}
+      - {{ win_prefix }}bin/kdestroy{{ win_suffix }}
+      - {{ win_prefix }}bin/kfwcpcc{{ win_suffix }}
+      - {{ win_prefix }}bin/kinit{{ win_suffix }}
+      - {{ win_prefix }}bin/klist{{ win_suffix }}
+      - {{ win_prefix }}bin/kpasswd{{ win_suffix }}
+      - {{ win_prefix }}bin/kprop{{ win_suffix }}
+      - {{ win_prefix }}bin/kpropd{{ win_suffix }}
+      - {{ win_prefix }}bin/kproplog{{ win_suffix }}
+      - {{ win_prefix }}bin/krb5-send-pr{{ win_suffix }}
+      - {{ win_prefix }}bin/krb5kdc{{ win_suffix }}
+      - {{ win_prefix }}bin/kswitch{{ win_suffix }}
+      - {{ win_prefix }}bin/ktutil{{ win_suffix }}
+      - {{ win_prefix }}bin/kvno{{ win_suffix }}
+      - {{ win_prefix }}bin/mit2ms{{ win_suffix }}
+      - {{ win_prefix }}bin/ms2mit{{ win_suffix }}
+      - {{ win_prefix }}bin/sclient{{ win_suffix }}
+      - {{ win_prefix }}bin/sim_client{{ win_suffix }}
+      - {{ win_prefix }}bin/sim_server{{ win_suffix }}
+      - {{ win_prefix }}bin/sserver{{ win_suffix }}
+      - {{ win_prefix }}bin/uuclient{{ win_suffix }}
+      - {{ win_prefix }}bin/uuserver{{ win_suffix }}
+    requirements:
+      build:
+        - {{ stdlib("c") }}
+        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
+        - autoconf     # [not win]
+        - bison        # [not win]
+        - gettext      # [not win]
+        - libtool      # [unix]
+        - make         # [unix]
+        - msys2-gawk   # [win]
+        - msys2-posix  # [win]
+        - perl         # [win]
+        - pkg-config   # [unix]
+        - python *     # [not win]
+      host:
+        - libedit      # [unix]
+        - lmdb         # [unix]
+        - openssl
+        - {{ pin_subpackage('libkrb5', exact=True) }}
+      run:
+        - {{ pin_subpackage('libkrb5', exact=True) }}
+        - libedit  # [unix]
+    test:
+      commands:
+        - set -x                           # [unix]
+        # Test for key executables
+        - test -f $PREFIX/bin/kdestroy     # [unix]
+        - test -f $PREFIX/bin/kinit        # [unix]
+        - test -f $PREFIX/bin/klist        # [unix]
+        - test -f $PREFIX/sbin/krb5kdc     # [unix]
+        - echo on                          # [win]
+        # Test for Windows executables
+        - if exist "%PREFIX%\\Library\\bin\\kinit.exe" (exit 0) else (exit 1)  # [win]
+        - if exist "%PREFIX%\\Library\\bin\\klist.exe" (exit 0) else (exit 1)  # [win]
 
 about:
   home: https://web.mit.edu/kerberos/
