Do not use openssl on Windows as it's not needed

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
   sha256: 2157d92020d408ed63ebcd886a92d1346a1383b0f91123a0473b4f69b4a24861
 
 build:
-  number: 3
+  number: 4
   skip: true  # [win and vc<14]
   missing_dso_whitelist:
     - api-ms-win-core-winrt-error-l1-1-0.dll   # [win]
@@ -39,7 +39,7 @@ requirements:
   host:
     - libedit {{ libedit }}   # [unix]
     - lmdb {{ lmdb }}         # [unix]
-    - openssl {{ openssl }}
+    - openssl {{ openssl }}   # [unix]
 
 outputs:
   - name: lib{{ name }}
@@ -54,7 +54,6 @@ outputs:
         - libstdcxx-ng    # [linux]
         - lmdb            # [unix]
         - ncurses         # [unix]
-        - openssl         # [win]
     files:
       # Libraries - Unix (only krb5 libraries, not executables)
       - lib/libcom_err*       # [unix]
@@ -128,11 +127,10 @@ outputs:
       host:
         - libedit {{ libedit }}  # [unix]
         - lmdb {{ lmdb }}        # [unix]
-        - openssl {{ openssl }}
+        - openssl {{ openssl }}  # [unix]
       run:
         - lmdb         # [unix]
-        - openssl      # [unix]
-        - openssl 3.*  # [win]
+        - openssl      # [unix] 
     test:
       commands:
         - set -x                                  # [unix]
@@ -154,7 +152,7 @@ outputs:
         - libcxx          # [osx]
         - libstdcxx-ng    # [linux]
         - lmdb            # [unix]
-        - openssl
+        - openssl         # [unix]
     files:
       # Executables - Unix (only executables, not libraries)
       - bin/gss-client
@@ -233,7 +231,7 @@ outputs:
       host:
         - libedit {{ libedit }}  # [unix]
         - lmdb {{ lmdb }}        # [unix]
-        - openssl {{ openssl }}
+        - openssl {{ openssl }}  # [unix]
         - {{ pin_subpackage('libkrb5', exact=True) }}
       run:
         - {{ pin_subpackage('libkrb5', exact=True) }}
